Add initial project structure with core components, configuration, and documentation
- Created core modules for memory management, clustering, and policy execution.
- Added integration with PostgreSQL and Alembic for database migrations.
- Implemented a CLI for memory management and a REST API for external access.
- Included configuration files and example usage scripts.
- Established a comprehensive README and contributing guidelines for project onboarding.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+build/
+dist/
+.eggs/
+*.egg-info/
+.env
+.venv
+.cache/
+.mypy_cache/
+.pytest_cache/
+.DS_Store
+.idea/
+.vscode/
+*.log
+logs/
+.ipynb_checkpoints/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
