--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,14 +30,37 @@ name = "memoric"
 version = "0.0.1"
 description = "Deterministic, policy-driven memory management for AI agents"
 readme = "README.md"
-requires-python = ">=3.9"
-authors = [{ name = "Muthanna Alfaris" }]
+requires-python = ">=3.10"
+authors = [{ name = "Muthanna Alfaris", email = "ceo@cyberbeam.ie"  }]
 license = { text = "MIT" }
 keywords = ["AI", "agents", "memory", "framework", "retrieval"]
 classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent",
+]
+
+dependencies = [
+  # keep existing runtime deps here, for example:
+  "fastapi>=0.112.0",
+  "sqlalchemy>=2.0",
+  "pydantic>=2.8.0",
+]
+
+[project.optional-dependencies]
+dev = [
+  "pytest",
+  "pytest-cov",
+  "black",
+  "flake8",
+  "mypy",
+  "build",
 ]
 
 [project.scripts]
