--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,32 +2,52 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - master
+      - "fix/*"
   pull_request:
-    branches: [ main ]
 
 jobs:
-  lint-and-test:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: [3.10, 3.11, 3.12]
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Install build tools
+        run: python -m pip install --upgrade pip
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install black flake8 pytest
-      - name: Lint
+          pip install -e ".[dev]" || pip install -e .
+          pip install -r requirements.txt || true
+
+      - name: Lint (black)
         run: |
+          python -m pip install black
           black --check .
+
+      - name: Lint (flake8)
+        run: |
+          python -m pip install flake8
           flake8 .
+
       - name: Run tests
-        run: pytest
+        run: |
+          python -m pip install pytest pytest-cov
+          pytest -q
 
-
+      - name: Build wheel
+        run: |
+          python -m pip install build
+          python -m build --wheel --outdir dist
