--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,9 +48,13 @@ classifiers = [
 
 dependencies = [
   # keep existing runtime deps here, for example:
-  "fastapi>=0.112.0",
-  "sqlalchemy>=2.0",
+  "pyyaml>=6.0.1",
   "pydantic>=2.8.0",
+  "click>=8.1.7",
+  "rich>=13.7.1",
+  "sqlalchemy>=2.0",
+  "fastapi>=0.112.0",
+  "uvicorn>=0.30.0",
 ]
 
 [project.optional-dependencies]
