--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12']
+        python-major: [3]
+        python-minor: [10, 11, 12]
+
 
     steps:
       - name: Checkout
@@ -22,7 +24,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ format('{0}.{1}', matrix.python-major, matrix.python-minor) }}
 
       - name: Install build tools
         run: python -m pip install --upgrade pip
