--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         python-major: [3]
-        python-minor: [10, 11, 12]
+        python-minor: [11, 12]
 
 
     steps:
