--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-major: [3]
-        python-minor: [11, 12]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
 
     steps:
@@ -24,7 +23,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ format('{0}.{1}', matrix.python-major, matrix.python-minor) }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install build tools
         run: python -m pip install --upgrade pip
@@ -32,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -e ".[dev]" || pip install -e .
-          pip install -r requirements.txt || true
+          pip install -r requirements.txt
 
       - name: Lint (black)
         run: |
