--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ line-length = 100
 target-version = ["py39", "py310", "py311"]
 include = "\\.pyi?$"
 exclude = """
-/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist)/
+/(\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.nox|\\.tox|\\.venv|_build|buck-out|build|dist)/
 """
 
 [tool.flake8]
