--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,27 +27,29 @@ py_version = 39
 
 [project]
 name = "memoric"
-version = "0.0.1"
+version = "0.1.0"
 description = "Deterministic, policy-driven memory management for AI agents"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [{ name = "Muthanna Alfaris", email = "ceo@cyberbeam.ie"  }]
 license = { text = "Apache-2.0" }
-keywords = ["AI", "agents", "memory", "framework", "retrieval"]
+keywords = ["AI", "agents", "memory", "framework", "retrieval", "LLM", "RAG"]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: Apache Software License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 
 dependencies = [
-  # keep existing runtime deps here, for example:
   "pyyaml>=6.0.1",
   "pydantic>=2.8.0",
   "click>=8.1.7",
@@ -58,7 +60,23 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+llm = [
+  "openai>=1.0.0",
+]
+metrics = [
+  "prometheus-client>=0.19.0",
+]
 dev = [
+  "pytest",
+  "pytest-cov",
+  "black",
+  "flake8",
+  "mypy",
+  "build",
+]
+all = [
+  "openai>=1.0.0",
+  "prometheus-client>=0.19.0",
   "pytest",
   "pytest-cov",
   "black",
@@ -68,7 +86,7 @@ dev = [
 ]
 
 [project.scripts]
-memoric = "memoric_cli:main"
+memoric = "memoric.cli:main"
 
 [project.urls]
 Homepage = "https://github.com/cyberbeamhq/memoric"
